// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> should render a large icon 1`] = `
.c0.fa {
  font-size: 1.5rem;
}

.c0.icon-small {
  bottom: 2px;
  font-size: xx-small;
  position: relative;
}

<Icon
  isLarge={false}
  isSpinning={false}
  isStacked={false}
  size="large"
  type="circle"
>
  <styled.i
    aria-hidden={true}
    className="icon fa circle"
    size="large"
  >
    <i
      aria-hidden={true}
      className="icon fa circle c0"
      size="large"
    />
  </styled.i>
</Icon>
`;

exports[`<Icon /> should render a non-FontAwesome icon 1`] = `
.c0.fa {
  font-size: 1rem;
}

.c0.icon-small {
  bottom: 2px;
  font-size: xx-small;
  position: relative;
}

<Icon
  isLarge={false}
  isSpinning={false}
  isStacked={false}
  size="medium"
  type="intelli-icon-avatar"
>
  <styled.i
    aria-hidden={true}
    className="icon fa intelli-icon-avatar"
    size="medium"
  >
    <i
      aria-hidden={true}
      className="icon fa intelli-icon-avatar c0"
      size="medium"
    />
  </styled.i>
</Icon>
`;

exports[`<Icon /> should render an icon with a badge 1`] = `
.c1 {
  position: absolute;
  margin-top: -9px;
  margin-left: -15px;
}

.c0.fa {
  font-size: 2rem;
}

.c0.icon-small {
  bottom: 2px;
  font-size: xx-small;
  position: relative;
}

.c2 {
  background-color: #1A2B3C;
  color: #1A293C;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 15px;
  box-shadow: 0 2px 2px rgba(0,0,0,0.24);
  border: 1px solid $neutral-base;
  border-radius: 50%;
  color: $neutral-text;
  display: inline-block;
  font-weight: 600;
  text-align: center;
}

.c2 .refresh-icon {
  background-color: $main-background;
  color: $primary-base;
}

<Icon
  badge={
    <Badge
      backgroundColor="#1A2B3C"
      color="#1A293C"
      label={6}
      size="small"
    />
  }
  isLarge={false}
  isSpinning={false}
  isStacked={false}
  size="xlarge"
  type="fa-check"
>
  <styled.i
    aria-hidden={true}
    className="icon fa fa-check"
    size="xlarge"
  >
    <i
      aria-hidden={true}
      className="icon fa fa-check c0"
      size="xlarge"
    />
  </styled.i>
  <styled.span
    size="xlarge"
  >
    <span
      className="c1"
      size="xlarge"
    >
      <Badge
        backgroundColor="#1A2B3C"
        color="#1A293C"
        label={6}
        size="medium"
      >
        <styled.span
          backgroundColor="#1A2B3C"
          color="#1A293C"
          size="medium"
        >
          <span
            className="c2"
            color="#1A293C"
            size="medium"
          >
            6
          </span>
        </styled.span>
      </Badge>
    </span>
  </styled.span>
</Icon>
`;

exports[`<Icon /> should render icon with a custom size 1`] = `
.c0.fa {
  font-size: 2.6rem;
}

.c0.icon-small {
  bottom: 2px;
  font-size: xx-small;
  position: relative;
}

<Icon
  customSize={2.6}
  isLarge={false}
  isSpinning={false}
  isStacked={false}
  size="medium"
  type="fa-check"
>
  <styled.i
    aria-hidden={true}
    className="icon fa fa-check"
    customSize={2.6}
    size="medium"
  >
    <i
      aria-hidden={true}
      className="icon fa fa-check c0"
      size="medium"
    />
  </styled.i>
</Icon>
`;

exports[`<Icon /> should render icon with colour 1`] = `
.c0 {
  color: #1A2B3C;
}

.c0.fa {
  font-size: 1rem;
}

.c0.icon-small {
  bottom: 2px;
  font-size: xx-small;
  position: relative;
}

<Icon
  color="#1A2B3C"
  isLarge={false}
  isSpinning={false}
  isStacked={false}
  size="medium"
  type="fa-check"
>
  <styled.i
    aria-hidden={true}
    className="icon fa fa-check"
    color="#1A2B3C"
    size="medium"
  >
    <i
      aria-hidden={true}
      className="icon fa fa-check c0"
      color="#1A2B3C"
      size="medium"
    />
  </styled.i>
</Icon>
`;

exports[`<Icon /> should render icon with no size or colour 1`] = `
.c0.fa {
  font-size: 1rem;
}

.c0.icon-small {
  bottom: 2px;
  font-size: xx-small;
  position: relative;
}

<Icon
  isLarge={false}
  isSpinning={false}
  isStacked={false}
  size="medium"
  type="fa-check"
>
  <styled.i
    aria-hidden={true}
    className="icon fa fa-check"
    size="medium"
  >
    <i
      aria-hidden={true}
      className="icon fa fa-check c0"
      size="medium"
    />
  </styled.i>
</Icon>
`;

exports[`<Icon /> should render icon with size 1`] = `
.c0.fa {
  font-size: 1rem;
}

.c0.icon-small {
  bottom: 2px;
  font-size: xx-small;
  position: relative;
}

<Icon
  isLarge={false}
  isSpinning={false}
  isStacked={false}
  size="medium"
  type="fa-check"
>
  <styled.i
    aria-hidden={true}
    className="icon fa fa-check"
    size="medium"
  >
    <i
      aria-hidden={true}
      className="icon fa fa-check c0"
      size="medium"
    />
  </styled.i>
</Icon>
`;
